# scikit-lego

./: .appveyor.yml  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  Untitled.ipynb  autograd.ipynb  demo.ipynb  docs-requirements.txt  features.py  index.html  mkdocs.yaml  monotonic.ipynb  objects.inv  playground.ipynb  prova.py  pyproject.toml  pytest.ini  readme.md  setup.py  t.py  wip.ipynb
.claude/skills/: anywidget-generator
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATEpull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature-request-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  claude.yml  dependencies.yml  greetings.yml  pythonpackage.yml  renderdocs.yml  schedule-dependencies.yml  style.yml  test-linux.yml  test-windows.yml  test.yml  windows.yml
_scripts/: cross-validation.py  datasets.py  meta-models.py  pandas-pipelines.py  preprocessing.py
_static/linear-models/: grid.html
_static/meta-models/: outlier-classifier.html
api/base/: index.html
api/common/: index.html
api/datasets/: index.html
api/decay-functions/: index.html
api/decomposition/: index.html
api/dummy/: index.html
api/feature-selection/: index.html
api/linear-model/: index.html
api/meta/: index.html
api/metrics/: index.html
api/mixture/: index.html
api/model-selection/: index.html
api/naive-bayes/: index.html
api/neighbors/: index.html
api/pandas-utils/: index.html
api/pipeline/: index.html
api/preprocessing/: index.html
api/shrinkage-functions/: index.html
conda/: meta.yaml
contribution/: index.html
doc/: Untitled.ipynb  conf.py  contribution.rst  contributors.rst  cross_validation.rst  crossvalidation.ipynb  datasets.ipynb  debug_pipeline.ipynb  fairness.ipynb  index.rst  install.rst  linear-models.ipynb  linear-models.md  meta.ipynb  meta.rst  mixture-methods.rst  naive-bayes.rst  outliers.ipynb  pandas_pipeline.ipynb  preprocessing.ipynb  preprocessing.rst  rstudio.md  this.md  timegapsplit.ipynb
doc/_templates/: layout.html
doc/api/: API Reference.rst  base.rst  common.rst  datasets.rst  decomposition.rst  dummy.rst  linear_model.rst  meta.rst  metrics.rst  mixture.rst  model_selection.rst  modules.rst  naive_bayes.rst  pandas_utils.rst  pipeline.rst  preprocessing.rst  sklego.rst
doc/notebooks/: lowess-plots.ipynb
docs/: .buildinfo  Makefile  README.md  contribution.md  generate_this_content.py  genindex.html  index.html  index.md  install.html  installation.md  objects.inv  py-modindex.html  rstudio.md  search.html  searchindex.js  this.md
docs/.doctrees/: environment.pickle  index.doctree  install.doctree
docs/_modules/: index.html
docs/_scripts/: cross-validation.py  debug-pipeline.py  fairness.py  feature-selection.py  linear-models.py  meta-models.py  mixture-methods.py  naive-bayes.py  outliers.py  preprocessing.py
docs/_sources/: install.rst.txt
docs/_static/: documentation_options.js
docs/api/: base.md  common.md  datasets.md  decay-functions.md  decomposition.md  dummy.md  features-selection.md  linear-model.md  meta.md  metrics.md  mixture.md  model-selection.md  modules.html  naive-bayes.md  neighbors.md  pandas-utils.md  pipeline.md  preprocessing.md  shrinkage-functions.md  sklego.html
docs/examples/: nlp_text_classification.py
docs/user-guide/: cross-validation.md  datasets.md  debug-pipeline.md  fairness.md  feature-selection.md  linear-models.md  meta-models.md  mixture-methods.md  naive-bayes.md  outliers.md  pandas-pipelines.md  preprocessing.md  quickstart.md
examples/lowess_example/: Lo(w)essRegressor.ipynb
installation/: index.html
mkdocs/: index.md
mkdocs/api/: base.md  common.md  datasets.md  decomposition.md  dummy.md  mixture.md  model-selection.md  preprocessing.md
nbs/: isolation_encoder.py
nbs/ensemble/: isolation_encoder.py  widget.css  widget.js
notebooks/: DA_dummy_data.ipynb  DA_loess.ipynb  EnsembleModel.ipynb  TimeGapSplit.ipynb  debug_pipeline.ipynb  time_series_features.ipynb
requirements/: docs.txt
rstudio/: index.html
search/: search_index.json
skblocks/: transformers.py
sklego/: Untitled.ipynb  __init__.py  _sklearn_compat.py  base.py  common.py  dataframe_agnostic_utils.py  datasets.py  debug_pipeline.py  dummy.py  ensemble_model.py  features_capper.py  group_estimator.py  impute.py  linear.py  linear_model.py  loess.py  meta.py  metrics.py  mixture.py  model_selection.py  naive_bayes.py  neighbors.py  notinstalled.py  outlier.py  pandas.py  pandas_utils.py  pipeline.py  plotting.py  policy.py  preprocessing.py  testing.py  this.py  transformers.py  wontpredict.py
sklego/data/: abalone.csv  arrests.csv  chickweight.csv  heroes.csv
sklego/decomposition/: __init__.py  pca_reconstruction.py  umap_reconstruction.py
sklego/ensemble/: isolation_encoder.py
sklego/feature_selection/: __init__.py  maximum_relevance_minimum_redundancy.py  mrmr.py
sklego/meta/: __dev_grouped_predictors.py  __init__.py  _decay_utils.py  _grouped_utils.py  _shrinkage_utils.py  confusion_balancer.py  decay_estimator.py  estimator_transformer.py  grouped_estimator.py  grouped_predictor.py  grouped_transformer.py  hierarchical.py  hierarchical_predictor.py  ordinal_classification.py  outlier_classifier.py  outlier_remover.py  regression_outlier_detector.py  subjective_classifier.py  thresholder.py  zero_inflated_regressor.py
sklego/mixture/: __init__.py  bayesian_gmm_classifier.py  bayesian_gmm_detector.py  gmm_classifier.py  gmm_outlier_detector.py
sklego/preprocessing/: __init__.py  columncapper.py  dictmapper.py  formulaictransformer.py  identitytransformer.py  intervalencoder.py  (+9 more)
temp/: grouped_predictor.ipynb
tests/: Untitled.ipynb  conf_transformer.py  conftest.py  test_api.py  test_datasets.py  test_debug_pipeline.py  test_debug_pipeline_w_sklearn_test.py  test_impute.py  test_notinstalled.py  test_pandas.py  test_pandas_utils.py
this/: index.html
tmp/: ordinal_classification_demo.ipynb
(+147 files in other folders)
