[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-lego"
version = "0.9.8"
description="A collection of lego bricks for scikit-learn pipelines"

license = {file = "LICENSE"}
readme = "readme.md"
requires-python = ">=3.10"
authors = [
    {name = "Vincent D. Warmerdam"},
    {name = "Matthijs Brouns"},
]

maintainers = [
    {name = "Francesco Bruzzesi"}
]

dependencies = [
    "narwhals>=1.5.0",
    "pandas>=1.1.5",
    "scikit-learn>=1.0",
    "sklearn-compat>=0.1.3",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
repository = "https://github.com/koaning/scikit-lego"
issue-tracker = "https://github.com/koaning/scikit-lego/issues"
documentation = "https://koaning.github.io/scikit-lego/"

[project.optional-dependencies]
cvxpy = ["cmake", "osqp", "cvxpy>=1.1.8", "numpy<2.0"]
formulaic = ["formulaic>=0.6.0"]
umap = ["umap-learn>=0.4.6", "numpy<2.0"]
all = ["scikit-lego[cvxpy,formulaic,umap]"]

docs = [
    "mkdocs>=1.5.3,<2.0.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-material>=9.4.5",
    "mkdocs-material-extensions>=1.2",
    "mkdocstrings>=0.23.0",
    "mkdocstrings-python>=1.7.3",
    "requests>=2.33.0",  # mkdocs-material dep, vulnerability found in 2.32.5, fixed in 2.33.0
    "urllib3>=2.6.3",  # mkdocs-material dep, 3 vulnerabilities found in 2.5.0, fixed in 2.6.3
]

test = [
    "narwhals[polars,pyarrow]",
    "pytest>=9.0.3",  # vulnerability found in pytest 8.4.2, fixed in 9.0.3
    "pytest-xdist>=1.34.0",
    "pytest-cov>=2.6.1",
    "pytest-mock>=1.6.3",
]

test-all = [
    "scikit-lego[all,test]",
]

utils = [
    "matplotlib>=3.0.2",
    "jupyter>=1.0.0",
    "jupyterlab>=0.35.4",
    "fonttools>=4.60.2",  # matplotlib dep, vulnerability found in 4.60.1, fixed in 4.60.2
    "pillow>=12.2.0",  # matplotlib dep, vulnerability found in 11.3.0, fixed in 12.2.0
    "pygments>=2.20.0",   # jupyter dep, vulnerability found in 2.19.0, fixed in 2.20.0
    "nbconvert>=7.17.0",  # jupyter dep, vulnerability found in 7.16.6, fixed in 7.17.0
    "requests>=2.33.0",  # jupyter dep, vulnerability found in 2.32.5, fixed in 2.33.0
    "tornado>=6.5.5",  # jupyter dep, 2 vulnerabilities in 6.5.2, fixed in 6.5.5
]

dev = [
    "scikit-lego[all,test,docs]",
    "pre-commit>=1.18.3",
    "virtualenv>=20.36.1",  # pre-commit dep, vulnerability in 20.35.3, fixed in 20.36.1
    "ruff>=0.15.8",
]

[tool.setuptools.packages.find]
include = ["sklego*"]
exclude = [
    "docs",
    "images",
    "notebooks",
    "tests",
]

[tool.setuptools.package-data]
sklego = ["data/*.zip"]

[tool.ruff]
line-length = 120
exclude = ["docs"]

[tool.ruff.lint]
extend-select = ["I", "T201"]
ignore = [
    "E731",  # do not assign a `lambda` expression, use a `def`
    ]

[tool.pytest.ini_options]
markers = [
    "cvxpy: tests that require cvxpy (deselect with '-m \"not cvxpy\"')",
    "formulaic: tests that require formulaic (deselect with '-m \"not formulaic\"')",
    "umap: tests that require umap (deselect with '-m \"not umap\"')"
]
